--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                         <div class="col-xxl-1 col-xl-1 col-md-1 col-lg-1 col-sm-12 col-xs-12"></div>
                         <div class="col-xxl-4 col-xl-4 col-md-4 col-lg-4 col-sm-12 col-xs-12">
                             <p class="resume-title-text">Download my Resume</p>
-                            <a href="#" class="text-decoration-none">
+                            <a href="https://drive.google.com/file/d/10pNYweX3bz-l7Ne51wOYk0DZFPQ8wY3n/view?usp=sharing" class="text-decoration-none">
                                 <div class="download-full-box">
                                     <div class="icon-box">
                                     <p class="mb-0"><i class="fa-solid fa-download"></i></p> 
